# napari-parallel

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_parallel/: __init__.py  _widget.py  _writer.py  napari.yaml
src/napari_parallel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/napari_parallel/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
